refactor de busqueda parametrizada
ahora hay un unico endpoint "/search" en cada microservicio. se busca
con parametros como antes, pero mas facil.
