# src/backend/version/router/version_router.go
@@ -14,10 +14,7 @@ func NewRouter() http.Handler {
 		r.Get("/health", handler.HealthCheck)
 		r.Get("/", handler.GetVersions)
 		r.Post("/", handler.PostVersion)
-		r.Get("/content", handler.GetVersionsByContent)
-		r.Get("/editor", handler.GetVersionsByEditor)
-		r.Get("/date", handler.GetVersionsByDate)
-		r.Get("/entry", handler.GetVersionsByEntryID)
+		r.Get("/search", handler.SearchVersions)
 		r.Delete("/entry", handler.DeleteVersionsByEntryID)
 
 		r.Route("/{id}", func(r chi.Router) {
